--- a/package.json
+++ b/package.json
@@ -1,5 +1,37 @@
 {
+  "name": "project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{js,css,html}\"",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.js": ["eslint --fix", "prettier --write"],
+    "*.html": ["eslint --fix", "prettier --write"],
+    "*.css": ["stylelint --fix", "prettier --write"]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com-personal:Uladzislau-Harbadzei/Homework.git"
+  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "prettier": "3.6.2"
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-css": "^0.11.0",
+    "eslint-plugin-html": "^8.1.3",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.4.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.6",
+    "prettier": "^3.6.2",
+    "stylelint": "^16.24.0",
+    "stylelint-config-standard": "^39.0.0"
   }
 }
