--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@
 .env.production.local
 
 npm-debug.log*
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
