--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@playwright/test": "^1.58.1",
+    "@types/node": "^25.2.1",
     "browser-sync": "^3.0.4",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
@@ -43,7 +45,6 @@
     "globals": "^16.4.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
-    "playwright": "^1.58.0",
     "prettier": "^3.6.2",
     "stylelint": "^16.24.0",
     "stylelint-config-standard": "^39.0.0"
